@@ -1,4 +1,6 @@
 ver 0.20.15 (not yet released)
+* resampler
+  - soxr: clear internal state after manual song change
 * state file
   - make mount point restore errors non-fatal
   - fix crash when restoring mounts with incompatible database plugin
